<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RReePPLLaaCCee</string>
    <!--RReePPLLaaCCee-->

    <string name="common_home_upper">Home</string>
    <string name="common_back_upper">Back</string>
    <string name="common_send_upper">Send</string>
    <string name="one_from_one">1 from 1</string>
    <string name="close">Close</string>
    <string name="open_app">Open App</string>
    <string name="load">Loading...</string>
    <string name="location_question">\" Would Like to Use Your Current Location?</string>
    <string name="ok">OK</string>
    <string name="dont_allow">Don\'t Allow</string>
    <string name="refresh">Refresh Application Data</string>
    <string name="no_sd_card">For work of the application an SD card needs to be inserted to the device.</string>
    <string name="no_datasource">The data source was not found. The application will be closed.</string>
    <string name="no_internet_connection">Cannot initialize app, please check internet connection. Turn on wi-fi or
        mobile internet.
    </string>
    <string name="need_internet_connection">Please connect to the internet.</string>

    <string name="alert_cannot_init">Initialization failed. Please try again</string>
    <string name="feedback_text_hint">Type your message here. It will be sent directly to the app creator</string>
    <string name="feedback_alert_send_ok">Thank you! Your message has been sent.
        Please check this app again later
    </string>
    <string name="feedback_type_message">Type your message</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pass">Forgot your pass?</string>
    <string name="password_restoration">Password Restoration</string>
    <string name="to_reset_password">To reset your password, type full email address you used to sign in with your app
    </string>
    <string name="email_upper">Email</string>
    <string name="reset_upper">Reset</string>
    <string name="input_correct_email">Input correct Email address</string>
    <string name="login_progress">Login...</string>
    <string name="password_was_sent">Password was sent to your email</string>
    <string name="password_reset">Password reset</string>
    <string name="email_not_found">We\'re sorry, your Email does not appear to be in our database. Please try again
    </string>
    <string name="reset_progress">Resetting...</string>
    <string name="login_no_internet">Login failed. Turn on wi-fi or mobile internet</string>
    <string name="reset_no_internet">Reset failed. Turn on wi-fi or mobile internet</string>
    <string name="wrong_login_information">Wrong login information</string>
    <string name="check_login_info">Please check your login info</string>

    <string name="core_notification">notification</string>
    <string name="core_refresh_date">Refresh Application Data</string>
    <string name="core_push_no_such_widget">There is no widget for this event. Please update your app</string>
    <string name="core_pushns_status">app_status</string>
    <string name="core_pushns_status_running">running</string>
    <string name="core_pushns_status_closed">closed</string>
    <string name="core_pushns_content_update_msg">The app content has changed. Please restart the app: close the app and
        open it again
    </string>

    <string name="fragment_login_form_register">Register</string>
    <string name="fragment_login_form_login">Log in</string>
    <string name="fragment_login_form_hint_name">Name</string>
    <string name="fragment_login_form_hint_email">Email</string>
    <string name="fragment_login_form_hint_email_restore_password">Your Email</string>
    <string name="fragment_login_form_hint_password">Password</string>
    <string name="fragment_login_form_hint_password_confirm">Confirm Password</string>
    <string name="fragment_login_form_remember_me">Remember me</string>
    <string name="fragment_login_form_forgot_my_password">Forgot password?</string>
    <string name="fragment_login_form_registration_complete_message_manual">Your registration is complete. You will get an email with a link to verify your email when your registration is approved.</string>
    <string name="fragment_login_form_registration_complete_message_manual_no_email">Your registration is compete. You will get a notification when your registration is approved.</string>
    <string name="fragment_login_form_registration_complete_message_auto">Your registration is complete. You will get an email with a link to verify your email before using the app.</string>
    <string name="fragment_login_form_registration_failed_message">That address is already registered with an account.</string>
    <string name="fragment_login_form_login_failed_message">Your log in has failed. Please try again, reset your password or register.</string>
    <string name="fragment_login_form_restore_password">Send</string>
    <string name="fragment_login_form_restore_password_complete_message">Password reset sent to your email.</string>
    <string name="fragment_login_form_restore_password_title">To reset your password, type full email address you used to sign in.</string>
    <string name="fragment_login_form_push_message">Registration for app_name is approved.</string>
    <string name="fragment_login_form_app_name_template">app_name</string>
    <string name="fragment_login_form_error_email">Enter valid email address.</string>
    <string name="fragment_login_form_error_name">Please enter user name.</string>
    <string name="fragment_login_form_error_password">Password must be at least 6 symbols.</string>
    <string name="fragment_login_form_error_confirm_password">Please enter identical passwords.</string>
    <string name="created_using_ibuildapp">Created using iBuildApp.com. Create Your Own App</string>

</resources>
