<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@drawable/splash_screen_ibuildapp_paied">
    <!-- TOP BAR -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="48dp" android:background="#000000">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/textView" android:layout_weight="1" android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/login"
                android:id="@+id/textView2" android:layout_weight="1" android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" android:layout_weight="1" android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"/>
    </LinearLayout>

    <!-- FORM -->
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_gravity="center" android:gravity="center_horizontal"
                android:layout_margin="8dp" android:layout_marginTop="16dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:background="@drawable/loginscreen_black_bg"
                    android:paddingTop="32dp" android:paddingBottom="32dp"
                    android:layout_marginTop="8dp">
                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_screen_login_username"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/username"/>
                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/login_screen_login_password"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/password"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" android:layout_marginLeft="18dp"
                        android:layout_marginRight="18dp" android:layout_marginBottom="16dp"
                        android:gravity="center_vertical" android:layout_marginTop="16dp">
                    <CheckBox
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:id="@+id/login_screen_remember_me_check_box"
                            android:textColor="#ffffff"
                            android:background="@drawable/login_screen_checkbox"
                            android:button="@drawable/empty"
                            android:checked="false"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/remember_me"
                            android:id="@+id/textView4" android:layout_marginLeft="16dp" android:textColor="#ffffff"
                            android:textSize="16sp"/>
                </LinearLayout>
                <Button
                        android:layout_width="fill_parent"
                        android:layout_height="48dp"
                        android:text="@string/login"
                        android:id="@+id/login_screen_login_button"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/loginscreen_btn_blue"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:layout_marginTop="12dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_pass"
                        android:id="@+id/forget_your_pass_button"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#ffffff"
                        />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>