<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/flipper"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#f7f7f7">

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:weightSum="10">

        <View android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="match_parent" />

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:layout_weight="8"
                      android:weightSum="11">

            <View android:layout_width="match_parent"
                  android:layout_weight="1"
                  android:layout_height="0dp" />

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="0dp"
                          android:orientation="vertical"
                          android:weightSum="10"
                          android:layout_weight="9">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="horizontal"
                        android:layout_weight="1.1"
                        android:weightSum="2">

                    <RelativeLayout android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1">

                        <ToggleButton android:id="@+id/register_tab"
                                      android:layout_width="match_parent"
                                      android:layout_height="match_parent"
                                      android:textAllCaps="false"
                                      android:textOn="@string/fragment_login_form_register"
                                      android:textOff="@string/fragment_login_form_register"
                                      android:textSize="20sp"
                                      android:background="@drawable/fragment_login_form_tab_register_background"/>

                    </RelativeLayout>

                    <FrameLayout android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1">

                        <ToggleButton android:id="@+id/login_tab"
                                      android:layout_width="match_parent"
                                      android:layout_height="match_parent"
                                      android:textOn="@string/fragment_login_form_login"
                                      android:textColor="@drawable/fragment_login_form_login_button_selector"
                                      android:textOff="@string/fragment_login_form_login"
                                      android:textSize="20sp"
                                      android:textAllCaps="false"
                                      android:background="@drawable/fragment_login_form_tab_login_background"/>

                    </FrameLayout>

                </LinearLayout>

                <View android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="0.5" />

                <RelativeLayout android:id="@+id/name_layout"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1.2">

                    <EditText android:id="@+id/name"
                              android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:paddingLeft="10dp"
                              android:paddingRight="10dp"
                              android:maxLines="1"
                              android:hint="@string/fragment_login_form_hint_name"
                              android:textColor="#333333"
                              android:textColorHint="#999999"
                              android:inputType="text"
                              android:background="@drawable/fragment_login_form_edittext_background_top"/>

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="match_parent"
                                  android:orientation="horizontal"
                                  android:gravity="right"
                                  android:weightSum="8">

                        <ImageView android:id="@+id/name_error"
                                   android:layout_width="0dp"
                                   android:layout_height="match_parent"
                                   android:layout_weight="0.8"
                                   android:layout_marginRight="10dp"
                                   android:src="@drawable/error"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout android:id="@+id/email_layout"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1.2">

                    <EditText android:id="@+id/email"
                              android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:paddingLeft="10dp"
                              android:paddingRight="10dp"
                              android:maxLines="1"
                              android:hint="@string/fragment_login_form_hint_email"
                              android:textColor="#333333"
                              android:textColorHint="#999999"
                              android:inputType="textEmailAddress"
                              android:background="@drawable/fragment_login_form_edittext_background"/>

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="match_parent"
                                  android:orientation="horizontal"
                                  android:gravity="right"
                                  android:weightSum="8">

                        <ImageView android:id="@+id/email_error"
                                   android:layout_width="0dp"
                                   android:layout_height="match_parent"
                                   android:layout_weight="0.8"
                                   android:layout_marginRight="10dp"
                                   android:src="@drawable/error"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout android:id="@+id/password_layout"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1.2">

                    <EditText android:id="@+id/password"
                              android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:paddingLeft="10dp"
                              android:paddingRight="10dp"
                              android:maxLines="1"
                              android:hint="@string/fragment_login_form_hint_password"
                              android:textColor="#333333"
                              android:textColorHint="#999999"
                              android:inputType="textPassword"
                              android:background="@drawable/fragment_login_form_edittext_background"/>

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="match_parent"
                                  android:orientation="horizontal"
                                  android:gravity="right"
                                  android:weightSum="8">

                        <ImageView android:id="@+id/password_error"
                                   android:layout_width="0dp"
                                   android:layout_height="match_parent"
                                   android:layout_weight="0.8"
                                   android:layout_marginRight="10dp"
                                   android:src="@drawable/error"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout android:id="@+id/confirm_password_layout"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1.2">

                    <EditText android:id="@+id/confirm_password"
                              android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:paddingLeft="10dp"
                              android:paddingRight="10dp"
                              android:maxLines="1"
                              android:hint="@string/fragment_login_form_hint_password_confirm"
                              android:textColor="#333333"
                              android:textColorHint="#999999"
                              android:inputType="textPassword"
                              android:background="@drawable/fragment_login_form_edittext_background_bot"/>

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="match_parent"
                                  android:orientation="horizontal"
                                  android:gravity="right"
                                  android:weightSum="8">

                        <ImageView android:id="@+id/confirm_password_error"
                                   android:layout_width="0dp"
                                   android:layout_height="match_parent"
                                   android:layout_weight="0.8"
                                   android:layout_marginRight="10dp"
                                   android:src="@drawable/error"/>

                    </LinearLayout>

                </RelativeLayout>

                <View android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="0.4" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="horizontal"
                        android:layout_weight="0.6"
                        android:weightSum="10">

                    <com.appbuilder.core.LoginForm.LoginCheckedBox android:id="@+id/remember_me"
                                  android:layout_width="0dp"
                                  android:layout_height="match_parent"
                                  android:layout_weight="1.0"
                                  android:textOn=""
                                  android:textOff=""
                                  style="?android:attr/borderlessButtonStyle"
                                  android:background="@drawable/fragment_login_form_checkbox_background"
                                  tools:ignore="NewApi"/>

                    <TextView android:layout_width="0dp"
                              android:layout_height="match_parent"
                              android:layout_weight="9"
                              android:gravity="center_vertical"
                              android:paddingLeft="10dp"
                              android:text="@string/fragment_login_form_remember_me"
                              android:textColor="#888888"/>

                </LinearLayout>

                <View android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="0.4" />

                <TextView android:id="@+id/button"
                          android:layout_width="match_parent"
                          android:layout_height="0dp"
                          android:layout_weight="1.2"
                          android:text="@string/fragment_login_form_register"
                          android:textSize="24sp"
                          android:textColor="@android:color/white"
                          android:gravity="center"
                          android:background="@drawable/fragment_login_form_button_background"/>

                <View android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="0.6" />

                <RelativeLayout android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1.6">

                    <TextView android:id="@+id/forgot_my_password"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:gravity="left"
                              android:layout_alignParentLeft="true"
                              android:text="@string/fragment_login_form_forgot_my_password"
                              android:textColor="#555555"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:weightSum="11">

        <View android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="0.2" />

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="0.8"
                      android:weightSum="10">

            <View android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="8.6" />

            <ImageView android:id="@+id/restore_password_close"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="1.1"
                       android:background="@drawable/fragment_login_form_restore_password_close"/>

        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="10.8"
                      android:weightSum="10">

            <View android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1" />

            <LinearLayout android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:layout_weight="8"
                          android:weightSum="11">

                <View android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="1.3" />

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textColor="#555555"
                          android:text="@string/fragment_login_form_restore_password_title"/>

                <View android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="0.4" />

                <RelativeLayout android:id="@+id/restore_password_email_layout"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1.2">

                    <EditText android:id="@+id/restore_password_email"
                              android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:paddingLeft="10dp"
                              android:paddingRight="10dp"
                              android:maxLines="1"
                              android:hint="@string/fragment_login_form_hint_email_restore_password"
                              android:textColor="#333333"
                              android:textColorHint="#999999"
                              android:inputType="textEmailAddress"
                              android:background="@drawable/fragment_login_form_edittext_background_all_corners"/>

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="match_parent"
                                  android:orientation="horizontal"
                                  android:gravity="right"
                                  android:weightSum="8">

                        <ImageView android:id="@+id/restore_password_email_error"
                                   android:layout_width="0dp"
                                   android:layout_height="match_parent"
                                   android:layout_weight="0.8"
                                   android:layout_marginRight="10dp"
                                   android:src="@drawable/error"/>

                    </LinearLayout>

                </RelativeLayout>

                <View android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="0.4" />

                <TextView android:id="@+id/restore_password"
                          android:layout_width="match_parent"
                          android:layout_height="0dp"
                          android:layout_weight="1.2"
                          android:text="@string/fragment_login_form_restore_password"
                          android:textSize="24sp"
                          android:textColor="@android:color/white"
                          android:gravity="center"
                          android:background="@drawable/fragment_login_form_button_background"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ViewFlipper>

