<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/notification_main"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/splash_screen_ibuildapp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:layout_centerVertical="true"
                  android:layout_centerInParent="true"
                  android:layout_margin="15dp"
            >

        <com.appbuilder.core.PushNotification.AppPushNotificationPanel
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <ImageView
                    android:id="@+id/push_notification_prev"
                    android:src="@drawable/icon_arrow_left"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:visibility="invisible"/>

            <ImageView
                    android:id="@+id/push_notification_next"
                    android:src="@drawable/icon_arrow_right"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:visibility="invisible"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/notification_panel"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_centerInParent="true"
                          android:orientation="vertical"
                          android:gravity="center"
                          android:layout_marginLeft="35dp"
                          android:layout_marginRight="35dp">

                <TextView
                        android:text="@string/one_from_one"
                        android:id="@+id/push_notification_counter"
                        android:textSize="13sp"
                        android:textColor="#FFF"
                        android:layout_marginTop="5dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>

                <TextView
                        android:text=""
                        android:id="@+id/push_notification"
                        android:textSize="20sp"
                        android:textColor="#FFF"
                        android:paddingBottom="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:scrollbars="vertical"
                        android:maxLines="10"/>
            </LinearLayout>

        </com.appbuilder.core.PushNotification.AppPushNotificationPanel>

        <LinearLayout android:id="@+id/linearLayout"
                      android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:layout_marginTop="25dp">

            <Button android:id="@+id/push_button_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="55dp"
                    android:gravity="center"
                    android:text="@string/open_app"
                    android:width="110dp"
                    android:layout_gravity="center"/>

            <Button android:id="@+id/push_button_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="55dp"
                    android:gravity="center"
                    android:text="@string/close"
                    android:width="110dp"
                    android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
